# thesis-evo-bench

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: evolution_pipeline_config.yaml  evolution_prompt_config.yaml  pipeline_fixed.yaml  pipelines_population_example.yaml  topics_example.yaml
thesis_evo_bench/: __init__.py
thesis_evo_bench/cli/: __init__.py  main.py
thesis_evo_bench/config/: __init__.py  settings.py
thesis_evo_bench/core/: __init__.py  evaluators.py  evolution_pipeline_mode.py  evolution_prompt_mode.py  models.py  pipeline_executor.py  prompts.py  reporting.py  utils.py
thesis_evo_bench/llm/: __init__.py  client.py
